--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #000;
   }
   a:hover {
     color: #747bff;
@@ -78,7 +78,7 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 /* App container should fill the remaining space */
@@ -92,6 +92,7 @@ body {
   position: absolute;
   left: 0;
   width: 100%;
+  background-color: blanchedalmond;
 }
 
 /* Ensure navbar is fixed at the top */
@@ -106,4 +107,5 @@ body {
   /* Allow the content area to take all remaining space */
   padding: 20px;
   /* Optional: Add some padding for the content */
+  align-self: center;
 }
